    o   printCoefmat() has a new logical argument 'signif.legend'.

    o	quantile() has the option of several methods described in
	Hyndman & Fan (1996). (Contributed by Rob Hyndman.)

    o	rank() has two new 'ties.method's, "min" and "max".

    o	New function read.fortran() reads Fortran-style fixed-format
	specifications.

    o	read.fwf() reads multiline records, is faster for large files.

    o	readChar() can now read strings with embedded nuls.

    o	reorder.dendrogram() now has a 'agglo.FUN' argument for
	specification of a weights agglomeration function.

    o	Replaying a plot (with replayPlot() or via autoprinting) now
	automagically opens a device if none is open.

    o   replayPlot() issues a warning if an attempt is made to replay
	a plot that was recorded using a different R version (the
	format for recorded plots is not guaranteed to be stable
	across different R versions).  The Windows-menu equivalent
	(History...Get from variable) issues a similar warning.

    o	reshape() can handle multiple 'id' variables.

    o   It is now possible to specify colours with a full alpha
	transparency channel via the new 'alpha' argument to the
	rgb() and hsv() functions, or as a string of the form "#RRGGBBAA".

	NOTE: most devices draw nothing if a colour is not opaque,
	but PDF and Quartz devices will render semitransparent colours.

	A new argument 'alpha' to the function col2rgb() 
        provides the ability to return the alpha component of
	colours (as well as the red, green, and blue components).

    o	source() with 'echo = TRUE' uses the function source attribute
	when displaying commands as they are parsed.

    o   setClass() and its utilities now warn if either superclasses
        or classes for slots are undefined.  (Use setOldClass to
        register S3 classes for use as slots)

    o	str(obj) now displays more reasonably the STRucture of S4 objects.

	It's also improved for language objects and lists with promise
	components.
