@@ -1,6 +1,6 @@
 
 R : Copyright 2004, The R Foundation for Statistical Computing
-Version 2.0.0 Under development (unstable) (2004-08-23), ISBN 3-900051-00-3
+Version 2.0.0 Under development (unstable) (2004-09-07), ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -8,7 +8,7 @@ Type 'license()' or 'licence()' for distribution details.
 
 R is a collaborative project with many contributors.
 Type 'contributors()' for more information and
-'citation()' on how to cite R in publications.
+'citation()' on how to cite R or R packages in publications.
 
 Type 'demo()' for some demos, 'help()' for on-line help, or
 'help.start()' for a HTML browser interface to help.
@@ -3507,6 +3507,7 @@ attach 'stats4' B
 detach 'stats4' B 
 detach 'stats4' A 
 > unloadNamespace("stats4")
+<environment: namespace:stats4>
 onUnload 'stats4' B 
 onUnload 'stats4' A 
 > ## Just tests
@@ -4154,4 +4155,32 @@ Warning message:
 "test string with """
 "1" "a "" and a '"
 > ## Quote in col name was unescaped in 1.9.1.
+> 
+> 
+> ## extensions to read.table
+> Mat <- matrix(
++               c(1:3, letters[1:3], 1:3, LETTERS[1:3],
++                 c("2004-01-01", "2004-02-01", "2004-03-01"),
++                 c("2004-01-01 12:00", "2004-02-01 12:00", "2004-03-01 12:00")),
++               3, 6)
+> foo <- tempfile()
+> write.table(Mat, foo, col.names=FALSE, row.names=F)
+> read.table(foo, colClasses=c(NA, NA, "NULL", "character", "Date", "POSIXct"))
+  V1 V2 V4         V5                  V6
+1  1  a  A 2004-01-01 2004-01-01 12:00:00
+2  2  b  B 2004-02-01 2004-02-01 12:00:00
+3  3  c  C 2004-03-01 2004-03-01 12:00:00
+> unlist(sapply(.Last.value, class))
+         V1          V2          V4          V5         V61         V62 
+  "integer"    "factor" "character"      "Date"    "POSIXt"   "POSIXct" 
+> read.table(foo, colClasses=c("factor",NA,"NULL","factor","Date","POSIXct"))
+  V1 V2 V4         V5                  V6
+1  1  a  A 2004-01-01 2004-01-01 12:00:00
+2  2  b  B 2004-02-01 2004-02-01 12:00:00
+3  3  c  C 2004-03-01 2004-03-01 12:00:00
+> unlist(sapply(.Last.value, class))
+       V1        V2        V4        V5       V61       V62 
+ "factor"  "factor"  "factor"    "Date"  "POSIXt" "POSIXct" 
+> unlink(foo)
+> ## added in 2.0.0
 > 
